# exception-c

./: .clang-format  .clangd  CMakeLists.txt  LICENSE  README.md
include/: exception.h
src/: exception.c
tests/: CMakeLists.txt  exception_tests.c
